added books and typeform

--- a/src/_layouts/base.pug
+++ b/src/_layouts/base.pug
@@ -16,6 +16,7 @@ html(lang="en")
   body
     include _components/nav
     | {{content}}
+    include _components/footer
 
   //- Looking for jQuery? jQuery is included in the main.js file
   script(src="/static/js/main.js")
