--- a/src/static/css/components/_nav.scss
+++ b/src/static/css/components/_nav.scss
@@ -104,6 +104,55 @@ a.logo {
   }
 }
 
+.mobile-nav {
+  &__overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba($color-white, .95);
+    padding: 1.5rem;
+    z-index: 10000;
+    display: none;
+  }
+  &--is-open {
+    display: block;
+  }
+  &__menu {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 30px;
+  }
+  &__link {
+    font-size: 2rem;
+    text-decoration: none;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    display: inline-block;
+    font-weight: 700;
+  }
+  &__close {
+    position: absolute;
+    right: 2.5rem;
+    top: 2.5rem;
+    .nav-mobile__button-line {
+      position: absolute;
+      &:first-of-type {
+       transform: rotate(45deg);
+      }
+      &:last-of-type {
+       transform: rotate(-45deg);
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 800px) {
   .nav__menu {
     display: none;
