--- a/src/static/css/utilities/_backgrounds.scss
+++ b/src/static/css/utilities/_backgrounds.scss
@@ -2,17 +2,17 @@
 // Utilities: Backgrounds
 //---------------------------------------
 
-.u-bg--black { color: $color-black !important;}
+.u-bg--black { background: $color-black !important;}
 
-.u-bg--gray-900 { color: $color-gray-900 !important; }
-.u-bg--gray-800 { color: $color-gray-800 !important; }
-.u-bg--gray-700 { color: $color-gray-700 !important; }
-.u-bg--gray-600 { color: $color-gray-600 !important; }
-.u-bg--gray-500 { color: $color-gray-500 !important; }
-.u-bg--gray-400 { color: $color-gray-400 !important; }
-.u-bg--gray-300 { color: $color-gray-300 !important; }
-.u-bg--gray-200 { color: $color-gray-200 !important; }
-.u-bg--gray-100 { color: $color-gray-100 !important; }
+.u-bg--gray-900 { background: $color-gray-900 !important; }
+.u-bg--gray-800 { background: $color-gray-800 !important; }
+.u-bg--gray-700 { background: $color-gray-700 !important; }
+.u-bg--gray-600 { background: $color-gray-600 !important; }
+.u-bg--gray-500 { background: $color-gray-500 !important; }
+.u-bg--gray-400 { background: $color-gray-400 !important; }
+.u-bg--gray-300 { background: $color-gray-300 !important; }
+.u-bg--gray-200 { background: $color-gray-200 !important; }
+.u-bg--gray-100 { background: $color-gray-100 !important; }
 
-.u-bg--white { color: $color-white !important; }
-.u-bg--primary { color: $color-primary !important; }
+.u-bg--white { background: $color-white !important; }
+.u-bg--primary { background: $color-primary !important; }
