--- a/src/static/css/components/_card.scss
+++ b/src/static/css/components/_card.scss
@@ -6,10 +6,11 @@
   background: $color-white;
   display: block;
   width: 100%;
+  height: 100%;
   box-shadow: 0 20px 20px rgba(0,0,0,.08);
   margin-bottom: 2rem;
   &__body, &__footer {
-    padding: 2rem;
+    padding: 1.5rem;
     display: block;
     width: 100%;
   }
@@ -24,12 +25,17 @@
     background-repeat: no-repeat;
   }
   &__title {
-    font-size: $text-size-gamma;
+    font-size: $text-size-delta;
     font-weight: 700;
   }
   &__text {
     font-size: 1.4rem;
     color: $color-gray-600;
+  }
+  &__img {
+    display: block;
+    margin: auto;
+    margin-bottom: .5rem;
   }
 }
 
@@ -40,5 +46,16 @@ a.card {
   &:hover, &:focus {
     box-shadow: 0 40px 40px rgba(0,0,0,.16);
     transform: translate(0,-20px);
+  }
+  &--cta {
+    background: $color-primary;
+    background: linear-gradient(45deg, darken($color-primary, 10%), lighten($color-primary, 10%));
+    color: $color-white;
+    .card__footer {
+      border-color: darken($color-primary, 10%);
+    }
+    .card__text {
+      color: rgba($color-white, .6);
+    }
   }
 }
