added post people + tools, added images

--- a/src/_includes/_components/nav.pug
+++ b/src/_includes/_components/nav.pug
@@ -10,13 +10,13 @@
       .nav-mobile__button-line
     ul.nav__menu
       li.nav__item
-        button.nav__link(onclick="location.href = '{{ site.baseurl }}/books';") Tools
+        button.nav__link(onclick="location.href = '{{ site.baseurl }}/tools';") Tools
       li.nav__item
         button.nav__link(onclick="location.href = '{{ site.baseurl }}/books';") Books
       li.nav__item
         button.nav__link(onclick="location.href = '{{ site.baseurl }}/books';") Websites
       li.nav__item
-        button.nav__link(onclick="location.href = '{{ site.baseurl }}/books';") People
+        button.nav__link(onclick="location.href = '{{ site.baseurl }}/people';") People
       li.nav__item
         button.nav__link(onclick="location.href = '{{ site.baseurl }}/books';") Articles
       li.nav__item
@@ -28,16 +28,16 @@
       .nav-mobile__button-line
     ul.mobile-nav__menu
       li.mobile-nav__item
-        a.mobile-nav__link(href="#") Home
+        a.mobile-nav__link(href="../index") Home
       li.mobile-nav__item
-        a.mobile-nav__link(href="#") Tools
+        a.mobile-nav__link(href="{{ site.baseurl }}/tools") Tools
       li.mobile-nav__item
-        a.mobile-nav__link(href="#") Books
+        a.mobile-nav__link(href="{{ site.baseurl }}/books") Books
       li.mobile-nav__item
-        a.mobile-nav__link(href="#") Websites
+        a.mobile-nav__link(href="{{ site.baseurl }}/books") Websites
       li.mobile-nav__item
-        a.mobile-nav__link(href="#") People
+        a.mobile-nav__link(href="{{ site.baseurl }}/people") People
       li.mobile-nav__item
-        a.mobile-nav__link(href="#") Articles
+        a.mobile-nav__link(href="{{ site.baseurl }}/books") Articles
       li.mobile-nav__item
-        a.mobile-nav__link(href="#") About
+        a.mobile-nav__link(href="{{ site.baseurl }}/books") About
