--- a/src/static/css/_components.scss
+++ b/src/static/css/_components.scss
@@ -8,3 +8,5 @@
 @import "components/list";
 @import "components/card";
 @import "components/footer";
+@import "components/copyright";
+@import "components/social";
