--- a/src/_includes/_components/footer.pug
+++ b/src/_includes/_components/footer.pug
@@ -1,11 +1,11 @@
 footer.content.u-bg--black.footer.u-t--white
   .container
     .row
-      .col.col__6
+      .col.col__6--sm
         .copyright
           img.copyright__img(src="/static/img/tbux.png")
           span.copyright__text Tampa Bay UX &copy; 2018
-      .col.col__6
+      .col.col__6--sm
         .social
           a.social__icon(href="https://twitter.com/tampabayux" target="_blank")
             svg(xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" id="svg3626" viewBox="0 0 300.00006 244.18703")
