--- a/src/index.pug
+++ b/src/index.pug
@@ -36,7 +36,7 @@ layout: base
           li.list__item
             a.list__link.card.card--cta(href="{{ site.baseurl }}/tools")
               .card__body
-                img.card__img(src="/static/img/tools.svg" width="100%") 
+                img.card__img(src="static/img/tools.svg" width="100%") 
                 .card__title Latest UX Tools
               .card__footer
                 .card__text View the whole list
@@ -57,7 +57,7 @@ layout: base
           li.list__item
             a.list__link.card.card--cta(href="{{ site.baseurl }}/books")
               .card__body
-                img.card__img(src="/static/img/tools.svg" width="100%") 
+                img.card__img(src="static/img/books.svg" width="100%") 
                 .card__title Latest UX Books
               .card__footer
                 .card__text View the whole list
@@ -78,7 +78,7 @@ layout: base
           li.list__item
             a.list__link.card.card--cta(href="{{ site.baseurl }}/books")
               .card__body
-                img.card__img(src="/static/img/websites.svg" width="100%") 
+                img.card__img(src="static/img/websites.svg" width="100%") 
                 .card__title Latest UX Books
               .card__footer
                 .card__text View the whole list
@@ -99,7 +99,7 @@ layout: base
           li.list__item
             a.list__link.card.card--cta(href="{{ site.baseurl }}/people")
               .card__body
-                img.card__img(src="/static/img/people.svg" width="100%") 
+                img.card__img(src="static/img/people.svg" width="100%") 
                 .card__title Latest People in UX
               .card__footer
                 .card__text View the whole list
@@ -120,7 +120,7 @@ layout: base
           li.list__item
             a.list__link.card.card--cta(href="{{ site.baseurl }}/books")
               .card__body
-                img.card__img(src="/static/img/articles.svg" width="100%") 
+                img.card__img(src="static/img/articles.svg" width="100%") 
                 .card__title Latest UX Articles
               .card__footer
                 .card__text View the whole list
