--- a/src/_includes/_components/nav.pug
+++ b/src/_includes/_components/nav.pug
@@ -14,10 +14,10 @@
       li.nav__item
         button.nav__link(onclick="location.href = '{{ site.baseurl }}/books';") Books
       li.nav__item
-        button.nav__link(onclick="location.href = '{{ site.baseurl }}/books';") Websites
+        button.nav__link(onclick="location.href = '{{ site.baseurl }}/websites';") Websites
       li.nav__item
         button.nav__link(onclick="location.href = '{{ site.baseurl }}/people';") People
-      li.nav__item
+      //li.nav__item
         button.nav__link(onclick="location.href = '{{ site.baseurl }}/books';") Articles
       li.nav__item
         button.nav__link.nav__link--alt(onclick="location.href = 'https://ryan1476.typeform.com/to/a0hkSl';") + Submit a resource
@@ -34,10 +34,10 @@
       li.mobile-nav__item
         a.mobile-nav__link(href="{{ site.baseurl }}/books") Books
       li.mobile-nav__item
-        a.mobile-nav__link(href="{{ site.baseurl }}/books") Websites
+        a.mobile-nav__link(href="{{ site.baseurl }}/websites") Websites
       li.mobile-nav__item
         a.mobile-nav__link(href="{{ site.baseurl }}/people") People
-      li.mobile-nav__item
+      //li.mobile-nav__item
         a.mobile-nav__link(href="{{ site.baseurl }}/books") Articles
-      li.mobile-nav__item
+      //li.mobile-nav__item
         a.mobile-nav__link(href="{{ site.baseurl }}/books") About
